fix(article-preview): fix z-index

--- a/app/blocks/article-preview/article-preview.scss
+++ b/app/blocks/article-preview/article-preview.scss
@@ -11,11 +11,19 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 3;
   }
 
   &__picture {
     transition: box-shadow .25s ease-in-out;
+
+    .image-bg {
+      z-index: 1;
+    }
+  }
+
+  &__tags {
+    z-index: 4 !important;
   }
 
   &__text * {
@@ -25,8 +33,10 @@
   }
 
   &__text {
+    position: relative;
     display: flex;
     flex-flow: column nowrap;
+    z-index: 2;
   }
 
   &__title {
